--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <h1>🚀 Get Lifetime VPN Access</h1>
     <p class="price">One-time payment of <strong>$5.44 USD</strong></p>
     <p class="note">This is the <strong>final and only payment</strong> you’ll ever need to make.</p>
+      <p class="price">Get VPN + Recovery code for  <strong>jahid009miah@gmail.com</strong> and <strong>elom75402@gmail.com</strong></p>
     <button class="buy-button" onclick="handleBuy()">Buy Now</button>
   </div>
 
