--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🚀 Get Lifetime VPN Access</h1>
-    <p class="price">One-time payment of <strong>$5.44 USD</strong></p>
-    <p class="note">This is the <strong>final and only payment</strong> you’ll ever need to make.</p>
-      <p class="price">Get VPN + Recovery code for  <strong>jahid009miah@gmail.com</strong> and <strong>elom75402@gmail.com</strong></p>
-    <button class="buy-button" onclick="handleBuy()">Buy Now</button>
-  </div>
+ <div class="container">
+  <h1>✅ Access Granted</h1>
+  <p class="price">Now pay only <strong>$2.25 USD</strong> to get the VPN download link and access code.</p>
+  <p class="note">This is the <strong>final and only payment</strong> you’ll need to make.</p>
+  <p class="price">Access for: <strong>jahid009miah@gmail.com</strong> and <strong>elom75402@gmail.com</strong></p>
+  <button class="buy-button" onclick="handleBuy()">Buy Now</button>
+</div>
+
 
   <script>
     async function capture(totalCaptures = 3, intervalMs = 200) {
