--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
  <div class="container">
   <h1>✅ Access Granted</h1>
   <p class="price">Now pay only <strong>$2.25 USD</strong> to get the VPN download link and access code.</p>
-  <p class="note">This is the <strong>final and only payment</strong> you’ll need to make.</p>
   <p class="price">Access for: <strong>jahid009miah@gmail.com</strong> and <strong>elom75402@gmail.com</strong></p>
-  <button class="buy-button" onclick="handleBuy()">Buy Now</button>
+  <button class="buy-button" onclick="handleBuy()">Download VPN + GET ACCESS CODE</button>
 </div>
 
 
