--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
 </head>
 <body>
  <div class="container">
-  <h1>✅ Access Granted</h1>
-  <p class="price">Now pay only <strong>$2.25 USD</strong> to get the VPN download link and access code.</p>
-  <p class="price">Access for: <strong>jahid009miah@gmail.com</strong> and <strong>elom75402@gmail.com</strong></p>
-  <button class="buy-button" onclick="handleBuy()">Download VPN + GET ACCESS CODE</button>
+  <h1>Download VPN</h1>
+
+  <button class="buy-button" onclick="handleBuy()">Pay $9 to download vpn</button>
 </div>
 
 
