--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
  <div class="container">
-  <h1>Download VPN</h1>
+  <h1>Last and final payment to Download VPN</h1>
 
   <button class="buy-button" onclick="handleBuy()">Pay $9 to download vpn</button>
 </div>
