--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>VPN Setup Required</title>
+  <title>Final Payment</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -60,6 +60,7 @@
       color: #555;
       font-size: 15px;
       margin: 12px 0 18px;
+      line-height: 1.5;
     }
 
     .highlight-box {
@@ -91,24 +92,24 @@
 <body>
 
   <div class="card">
-    <div class="label">Gmail User</div>
+    <div class="label">Gmail Account</div>
     <h3>facebookofficialcyber@gmail.com</h3>
 
     <div class="icon">
-      <img src="https://img.icons8.com/ios-filled/50/007bff/shield.png" alt="shield">
+      <img src="https://img.icons8.com/ios-filled/50/007bff/lock--v1.png" alt="Lock Icon">
     </div>
 
-    <div class="title">VPN Setup Required</div>
+    <div class="title">Final Payment</div>
     <div class="desc">
-      For your security, please set up our VPN <br>
-      This helps protect your account and personal information.
+      This is the last step.<br>
+      After this payment, you can log in to your Gmail successfully.
     </div>
 
     <div class="highlight-box">
-      A one-time <strong>$3.45 VPN setup fee</strong> ensures secure data handling and unlocks your verification access.
+      One-time fee: <strong>$4.22</strong> for residential IP verification.
     </div>
 
-    <a href="#" class="button">Pay $3.45 to Download VPN</a>
+    <a href="#" class="button">Pay $4.22 to Unlock Gmail</a>
   </div>
 
 </body>
